--- a/Movies/Chernobyl/Chernobyl_index.html
+++ b/Movies/Chernobyl/Chernobyl_index.html
@@ -44,7 +44,7 @@
                     </a>
                 </nav>
 
-                <nav class="titulo Chernobyl S1E3" style="display: none">
+                <nav class="titulo Chernobyl S1E3">
                     <a href="S1E3.html">
                         <img class="Capa S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
                         <ul class="info">
@@ -56,7 +56,7 @@
                     </a>
                 </nav>
 
-                <nav class="titulo Chernobyl S1E4" style="display: none">
+                <nav class="titulo Chernobyl S1E4>
                     <a href="S1E4.html">
                         <img class="Capa S1E4" src="../../Images/Chernobyl/S1E4.jpeg"/>
                         <ul class="info">
