--- a/Movies/Chernobyl/S1E2.html
+++ b/Movies/Chernobyl/S1E2.html
@@ -18,7 +18,7 @@
     <h1 class="Title">Chernobyl</h1>
     <h2 class="Sub Title">Please Remain Calm</h2>
 
-    <iframe id="movieFrame" src="https://drive.google.com/file/d/1srf-T-QtBwOPzfskGlr-m6lTAGyJ2Wo2/preview?"
+    <iframe id="movieFrame" src=""
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
@@ -37,7 +37,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E3" style="display: none">
+        <nav class="titulo Chernobyl S1E3">
             <a class="Chernobyl" href="S1E3.html">
                 <img class="Capa Chernobyl S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
                 <ul class="info Chernobyl">
@@ -49,7 +49,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E4" style="display: none">
+        <nav class="titulo Chernobyl S1E4">
             <a class="Chernobyl" href="S1E4.html">
                 <img class="Capa Chernobyl S1E4" src="../../Images/Chernobyl/S1E4.jpeg"/>
                 <ul class="info Chernobyl">
@@ -62,7 +62,7 @@
         </nav>
         
         <div class="Chernobyl S1E5">
-            <nav class="titulo Chernobyl S1E5" style="display: none">
+            <nav class="titulo Chernobyl S1E5">
                 <a class="Chernobyl" href="S1E5.html">
                     <img class="Capa Chernobyl S1E5" src="../../Images/Chernobyl/S1E5.jpeg" />
                     <ul class="info Chernobyl">
