--- a/Movies/Chernobyl/Chernobyl_index.html
+++ b/Movies/Chernobyl/Chernobyl_index.html
@@ -38,7 +38,7 @@
                         <ul class="info">
                             <li class="topic-Title"><strong>Episódio 2</strong></li>
                             <li class="topic-Subtitle">Please Remain Calm</li>
-                            <li class="topic">Duração: ?</li>
+                            <li class="topic">Duração: 1h 9min 18s</li>
                             <li class="topic">Dublado</li>
                         </ul>
                     </a>
@@ -50,32 +50,32 @@
                         <ul class="info">
                             <li class="topic-Title"><strong>Episódio 4</strong></li>
                             <li class="topic-Subtitle">Open Wide, O Earth</li>
-                            <li class="topic">Duração: ?</li>
+                            <li class="topic">Duração: 1h 3min 30s</li>
                             <li class="topic">Dublado</li>
                         </ul>
                     </a>
                 </nav>
 
-                <nav class="titulo Chernobyl S1E4>
+                <nav class="titulo Chernobyl S1E4">
                     <a href="S1E4.html">
                         <img class="Capa S1E4" src="../../Images/Chernobyl/S1E4.jpeg"/>
                         <ul class="info">
                             <li class="topic-Title"><strong>Episódio 5</strong></li>
                             <li class="topic-Subtitle">The Happiness of All Mankind</li>
-                            <li class="topic">Duração: ?</li>
+                            <li class="topic">Duração: 1h 10min 06s</li>
                             <li class="topic">Dublado</li>
                         </ul>
                     </a>
                 </nav>
                 
                 <div class="S1E5">
-                    <nav class="titulo Chernobyl S1E5" style="display: none">
+                    <nav class="titulo Chernobyl S1E5">
                         <a href="S1E5.html">
                             <img class="Capa S1E5" src="../../Images/Chernobyl/S1E5.jpeg" />
                             <ul class="info">
                                 <li class="topic-Title"><strong>Episódio 5</strong></li>
                                 <li class="topic-Subtitle">Vichnaya Pamya</li>
-                                <li class="topic">Duração: ?</li>
+                                <li class="topic">Duração: 1h 12min 26s</li>
                                 <li class="topic">Dublado</li>
                             </ul>
                         </a>
