--- a/Movies/Chernobyl/S1E4.html
+++ b/Movies/Chernobyl/S1E4.html
@@ -43,20 +43,20 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Episódio 2</strong></li>
                     <li class="topic-Subtitle">Please Remain Calm</li>
-                    <li class="topic">Duração: ?</li>
+                    <li class="topic">Duração: 1h 9min 18s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
         <nav class="titulo Chernobyl S1E3">
-            <a class="Chernobyl" href="S1E3.html">
-                <img class="Capa Chernobyl S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
-                <ul class="info Chernobyl">
-                    <li class="topic-Title Chernobyl"><strong>Episódio 3</strong></li>
-                    <li class="topic-Subtitle Chernobyl">Open Wide, O Earth</li>
-                    <li class="topic Chernobyl">Duração: ?</li>
-                    <li class="topic Chernobyl">Dublado</li>
+            <a href="S1E3.html">
+                <img class="Capa S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
+                <ul class="info">
+                    <li class="topic-Title"><strong>Episódio 3</strong></li>
+                    <li class="topic-Subtitle">Open Wide, O Earth</li>
+                    <li class="topic">Duração: 1h 3min 30s</li>
+                    <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
@@ -68,7 +68,7 @@
                     <ul class="info Chernobyl">
                         <li class="topic-Title Chernobyl"><strong>Episódio 5</strong></li>
                         <li class="topic-Subtitle Chernobyl">Vichnaya Pamya</li>
-                        <li class="topic Chernobyl">Duração: ?</li>
+                        <li class="topic Chernobyl">Duração: 1h 12min 26s</li>
                         <li class="topic Chernobyl">Dublado</li>
                     </ul>
                 </a>
