--- a/Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html
+++ b/Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html
@@ -22,13 +22,13 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div class="sequencia1">
-        <nav class="titulo Homem-aranha-longe-de-casa" style="display:none">
+        <nav class="titulo Homem-aranha-longe-de-casa">
             <a href="Homem-aranha-longe-de-casa.html">
                 <img class="Capa Homem-aranha-longe-de-casa" src="../../Images/homem aranha longe de casa.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Homem Aranha</strong></li>
                     <li class="topic-Subtitle">longe de casa</li>
-                    <li class="topic">Duração: 2h 09min 23s</li>
+                    <li class="topic">Duraï¿½ï¿½o: 2h 09min 23s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
