--- a/Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html
@@ -1,10 +1,12 @@
-<html>
+ï»¿<html>
 <head>
-    <meta charset="iso-8859-1" />
+    <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
-    <title>Indiana Jones e a última cruzada</title>
+    <link rel="stylesheet" href="../../Styles/seq.css" />
+
+    <title>Indiana Jones e o reino da caveira de cristal</title>
 </head>
 <body>
     <header>
@@ -22,11 +24,11 @@
     <div class="sequencia3">
         <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
             <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
-                <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
+                <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e a última cruzada</li>
-                    <li class="topic">Duração: 2h 06min 53s</li>
+                    <li class="topic-Subtitle">e a Ãºltima cruzada</li>
+                    <li class="topic">DuraÃ§Ã£o: 2h 06min 53s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -38,19 +40,19 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o templo perdido</li>
-                    <li class="topic">Duração: 1h 58min 28s</li>
+                    <li class="topic">DuraÃ§Ã£o: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
-            <a href="Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
-                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="../../Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+        <nav class="titulo Indiana-Jones-e-os-caÃ§adores-da-arca-perdida">
+            <a href="Indiana-Jones-e-os-caï¿½adores-da-arca-perdida.html">
+                <img class="Capa Indiana-Jones-e-os-caÃ§adores-da-arca-perdida" src="../../Images/Indiana Jones e os caÃ§adores da arca perdida.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic-Subtitle">e os caÃ§adores da arca perdida</li>
+                    <li class="topic">DuraÃ§Ã£o: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
