--- a/Movies/Se beber nao case/Se-beber-nao-case.html
+++ b/Movies/Se beber nao case/Se-beber-nao-case.html
@@ -20,7 +20,7 @@
     <iframe src="https://drive.google.com/file/d/19tPeYxAu3OufxXD8imZheTcicvByaEg2/preview?"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div class="sequencia">
+    <div class="sequencia2">
         <nav class="titulo Se-beber-nao-case-2">
             <a href="Se-beber-nao-case-2.html">
                 <img class="Capa Se-beber-nao-case-2" src="../../Images/Se beber nao case 2.jpg" />
