--- a/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="iso-8859-1" />
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css"/>
 
-    <title>Indiana Jones e os caÃ§adores da arca perdida</title>
+    <title>Indiana Jones e a última cruzada</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
     </header>
 
     <h1 class="Title">Indiana Jones</h1>
-    <h2 class="Sub Title"> e os caÃ§adores da arca perdida</h2>
+    <h2 class="Sub Title"> e os caçadores da arca perdida</h2>
 
     <iframe src="https://mega.nz/embed#!Aho1DQ5T!oWcXHfM3-AhKi6QaGYPMvsC5fEJxsPEXeSK1n-NzcUE"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -27,8 +27,8 @@
                 <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e a Ãºltima cruzada</li>
-                    <li class="topic">DuraÃ§Ã£o: 2h 06min 53s</li>
+                    <li class="topic-Subtitle">e a última cruzada</li>
+                    <li class="topic">Duração: 2h 06min 53s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -40,7 +40,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o templo perdido</li>
-                    <li class="topic">DuraÃ§Ã£o: 1h 58min 28s</li>
+                    <li class="topic">Duração: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -52,7 +52,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
-                    <li class="topic">DuraÃ§Ã£o: </li>
+                    <li class="topic">Duração: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
