--- a/Movies/Se beber nao case/Se-beber-nao-case-2.html
+++ b/Movies/Se beber nao case/Se-beber-nao-case-2.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../../Styles/seq.css"/>
 	<link rel="stylesheet" href="../../Styles/moviePg.css" />
 
-    <script src="../../Scripts/btn.js"></script>
+    <script type="text/javascript" src="../../Scripts/btn_a.js"></script>
 
 	<title>Se beber não case 2</title>
 </head>
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="sequencia" style="margin-top: 0">
+    <div class="sequencia2" style="margin-top: 0">
         <nav class="titulo Se-beber-nao-case">
             <a href="Se-beber-nao-case.html">
                 <img class="Capa Se-beber-nao-case-2" src="../../Images/Se beber nao case.jpg" />
