--- a/Movies/Se beber nao case/Se-beber-nao-case-3.html
+++ b/Movies/Se beber nao case/Se-beber-nao-case-3.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../Styles/seq.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
+    
     <title>Se beber não case 3</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
     <iframe src="https://drive.google.com/file/d/1O8SWSqrm4N6EROJaxQ0B8inttHTqmu6J/preview?"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div class="sequencia">
+    <div class="sequencia2">
         <nav class="titulo Se-beber-nao-case">
             <a href="Se-beber-nao-case.html">
                 <img class="Capa Se-beber-nao-case-2" src="../../Images/Se beber nao case.jpg" />
