--- a/Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html
+++ b/Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta charset="iso-8859-1" />
+    <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../Styles/seq.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
