--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<html lang="pt-br">
     <head>
-        <meta charset="iso-8859-1"/>
+        <meta charset="utf-8"/>
         <link rel="stylesheet" href="Styles/home.css"/>
 
         <title>Home - Watchers</title>
     </head>
 
-    <body onload="Ld()">
+    <body>
         <div class="filmes">
             <h1>Filmes</h1>
             <nav class="titulo Rei-Arthur">
@@ -210,6 +210,18 @@
                         <li class="topic-Title"><strong>Homem Aranha</strong></li>
                         <li class="topic-Subtitle">longe de casa</li>
                         <li class="topic">Duração: 2h 09min 23s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Familia-do-bagulho">
+                <a href="Movies/Familia-do-bagulho.html">
+                    <img class="Capa Familia-do-bagulho" src="Images/familia do bagulho.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Família do bagulho</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 1h 49min 54s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
