--- a/index.html
+++ b/index.html
@@ -226,6 +226,42 @@
                     </ul>
                 </a>
             </nav>
+
+            <nav class="titulo Duro-de-matar-4.0">
+                <a href="Movies/Duro de matar/Duro-de-matar-4.0.html">
+                    <img class="Capa Duro-de-matar-4.0" src="Images/Duro de matar 4.0.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Duro de matar</strong></li>
+                        <li class="topic-Subtitle">4.0</li>
+                        <li class="topic">Duração: 2h 8min 45s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Sniper-americano">
+                <a href="Movies/Sniper-americano.html"style="display: none;">
+                    <img class="Capa Sniper-americano" src="Images/Sniper americano.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Sniper</strong></li>
+                        <li class="topic-Subtitle">Americano</li>
+                        <li class="topic">Duração: 2h 12min 40s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Interstellar" style="display: none;">
+                <a href="Movies/Interstellar.html">
+                    <img class="Capa Interstellar" src="Images/Interstellar.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Interstellar</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 2h 49min 04s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
         </div><!--Fim div filmes-->
 
         <div class="series">
