--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </nav>
 
             <nav class="titulo Sniper-americano">
-                <a href="Movies/Sniper-americano.html"style="display: none;">
+                <a href="Movies/Sniper-americano.html">
                     <img class="Capa Sniper-americano" src="Images/Sniper americano.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Sniper</strong></li>
@@ -251,7 +251,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Interstellar" style="display: none;">
+            <nav class="titulo Interstellar">
                 <a href="Movies/Interstellar.html">
                     <img class="Capa Interstellar" src="Images/Interstellar.jpg" />
                     <ul class="info">
