--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Interstellar">
+            <nav class="titulo Interstellar" style="display: none">
                 <a href="Movies/Interstellar.html">
                     <img class="Capa Interstellar" src="Images/Interstellar.jpg" />
                     <ul class="info">
