--- a/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
@@ -1,18 +1,31 @@
 <html>
 <head>
-    <meta charset="iso-8859-1" />
+    <meta charset="utf-8" />
+    <script src="../../Scripts/Btn.js"></script>
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css" />
+    <link rel="stylesheet" href="../../Styles/menu.css" />
 
     <title>Indiana Jones e o templo perdidoo</title>
 </head>
 <body>
     <header>
-        <a href="../../index.html">
-            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
-        </a>
+        <nav>
+            <ul id="Btn" class="Menu Menu_bar close">
+                <li><a href="../../index.html">Menu</a></li>
+                <!--<li><a href="#">Categorias</a></li>-->
+                <li><a href="../../index.html#Filmes">Filmes</a></li>
+                <li><a href="../../index.html#Series">SÃ©ries</a></li>
+            </ul>
+        </nav>
+
+        <img id="BtnMenu" class="btnMenu open" src="../../Images/Btn_menu.png" onclick="Condition_menu()"/>
+        <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        <img class="search_icon" src="../../Images/Search.png" onclick="Condition_search()"/>
+
+        <input id="search_input" class="search close"/>
     </header>
 
     <h1 class="Title">Indiana Jones</h1>
@@ -28,20 +41,20 @@
                 <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e a última cruzada</li>
-                    <li class="topic">Duração: 2h 06min 53s</li>
+                    <li class="topic-Subtitle">e a ï¿½ltima cruzada</li>
+                    <li class="topic">Duraï¿½ï¿½o: 2h 06min 53s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
-            <a href="Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
-                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="../../Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+        <nav class="titulo Indiana-Jones-e-os-caï¿½adores-da-arca-perdida">
+            <a href="Indiana-Jones-e-os-caï¿½adores-da-arca-perdida.html">
+                <img class="Capa Indiana-Jones-e-os-caï¿½adores-da-arca-perdida" src="../../Images/Indiana Jones e os caï¿½adores da arca perdida.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                    <li class="topic">Duração: 1h 58min 28s</li>
+                    <li class="topic-Subtitle">e os caï¿½adores da arca perdida</li>
+                    <li class="topic">Duraï¿½ï¿½o: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -53,7 +66,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic">Duraï¿½ï¿½o: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
