--- a/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
@@ -1,22 +1,35 @@
 <html>
 <head>
-    <meta charset="iso-8859-1" />
+    <meta charset="utf-8" />
+    <script src="../../Scripts/Btn.js"></script>
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css"/>
+    <link rel="stylesheet" href="../../Styles/menu.css" />
 
-    <title>Indiana Jones e a última cruzada</title>
+    <title>Indiana Jones e a Ãºltima cruzada</title>
 </head>
 <body>
     <header>
-        <a href="../../index.html">
-            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
-        </a>
+        <nav>
+            <ul id="Btn" class="Menu Menu_bar close">
+                <li><a href="../../index.html">Menu</a></li>
+                <!--<li><a href="#">Categorias</a></li>-->
+                <li><a href="../../index.html#Filmes">Filmes</a></li>
+                <li><a href="../../index.html#Series">SÃ©ries</a></li>
+            </ul>
+        </nav>
+
+        <img id="BtnMenu" class="btnMenu open" src="../../Images/Btn_menu.png" onclick="Condition_menu()"/>
+        <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        <img class="search_icon" src="../../Images/Search.png" onclick="Condition_search()"/>
+
+        <input id="search_input" class="search close"/>
     </header>
 
     <h1 class="Title">Indiana Jones</h1>
-    <h2 class="Sub Title"> e os caçadores da arca perdida</h2>
+    <h2 class="Sub Title"> e os caÃ§adores da arca perdida</h2>
 
     <iframe src="https://mega.nz/embed#!Aho1DQ5T!oWcXHfM3-AhKi6QaGYPMvsC5fEJxsPEXeSK1n-NzcUE"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -27,8 +40,8 @@
                 <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e a última cruzada</li>
-                    <li class="topic">Duração: 2h 06min 53s</li>
+                    <li class="topic-Subtitle">e a Ãºltima cruzada</li>
+                    <li class="topic">DuraÃ§Ã£o: 2h 06min 53s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -40,7 +53,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o templo perdido</li>
-                    <li class="topic">Duração: 1h 58min 28s</li>
+                    <li class="topic">Duraï¿½ï¿½o: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -52,7 +65,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic">Duraï¿½ï¿½o: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
