--- a/Movies/Contratempo.html
+++ b/Movies/Contratempo.html
@@ -1,13 +1,31 @@
 ﻿<html>
 <head>
-    <script src="../Scripts/tempo.js"></script>
     <meta charset="utf-8" />
+    <script type="text/javascript" src="../Scripts/Btn.js"></script>
 
     <link rel="stylesheet" href="../Styles/moviePg.css" />
+    <link rel="stylesheet" href="../Styles/menu.css"/>
 
     <title>Contratempo</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul id="Btn" class="Menu Menu_bar close">
+                <li><a href="../index.html">Menu</a></li>
+                <!--<li><a href="#">Categorias</a></li>-->
+                <li><a href="../index.html#Filmes">Filmes</a></li>
+                <li><a href="../index.html#Series">Séries</a></li>
+            </ul>
+        </nav>
+
+        <img id="BtnMenu" class="btnMenu open" src="../Images/Btn_menu.png" onclick="Condition_menu()"/>
+        <img id="logo" class="Logo" src="../Images/Logo black.png" />
+        <img class="search_icon" src="../Images/Search.png" onclick="Condition_search()"/>
+
+        <input id="search_input" class="search close"/>
+    </header>
+
     <h1 class="Title">Contratempo</h1>
     <h2 class="Sub Title"></h2>
 	<iframe id="contratempo" src="https://drive.google.com/file/d/1zQIf9GswOkNQzD6x7TStxwNO9cEbENUL/preview?start=5"
