--- a/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
@@ -1,19 +1,33 @@
 ﻿<html>
 <head>
     <meta charset="utf-8"/>
+    <script src="../../Scripts/Btn.js"></script>
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css" />
+    <link rel="stylesheet" href="../../Styles/menu.css" />
+
 
     <title>Indiana Jones e a última cruzada</title>
 </head>
 <body>
 
     <header>
-        <a href="../../index.html">
-            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
-        </a>
+        <nav>
+            <ul id="Btn" class="Menu Menu_bar close">
+                <li><a href="../../index.html">Menu</a></li>
+                <!--<li><a href="#">Categorias</a></li>-->
+                <li><a href="../../index.html#Filmes">Filmes</a></li>
+                <li><a href="../../index.html#Series">Séries</a></li>
+            </ul>
+        </nav>
+
+        <img id="BtnMenu" class="btnMenu open" src="../../Images/Btn_menu.png" onclick="Condition_menu()"/>
+        <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        <img class="search_icon" src="../../Images/Search.png" onclick="Condition_search()"/>
+
+        <input id="search_input" class="search close"/>
     </header>
 
     <h1 class="Title">Indiana Jones</h1>
