--- a/Movies/Thor-Ragnarok.html
+++ b/Movies/Thor-Ragnarok.html
@@ -1,10 +1,32 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <script type="text/javascript" src="../Scripts/Btn.js"></script>
+
     <link rel="stylesheet" href="../Styles/moviePg.css" />
+    <link rel="stylesheet" href="../Styles/menu.css"/>
+
+
     <title>Thor Ragnarok</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul id="Btn" class="Menu Menu_bar close">
+                <li><a href="../index.html">Menu</a></li>
+                <!--<li><a href="#">Categorias</a></li>-->
+                <li><a href="../index.html#Filmes">Filmes</a></li>
+                <li><a href="../index.html#Series">Séries</a></li>
+            </ul>
+        </nav>
+
+        <img id="BtnMenu" class="btnMenu open" src="../Images/Btn_menu.png" onclick="Condition_menu()"/>
+        <img id="logo" class="Logo" src="../Images/Logo black.png" />
+        <img class="search_icon" src="../Images/Search.png" onclick="Condition_search()"/>
+
+        <input id="search_input" class="search close"/>
+    </header>
+
     <h1 class="Title">Thor Ragnarok</h1>
     <iframe 
         src="https://drive.google.com/file/d/1NV1CoCLS7bZ2LENeW31wpmr4JYr8GQBQ/preview?"
