--- a/index.html
+++ b/index.html
@@ -286,6 +286,18 @@
                     </ul>
                 </a>
             </nav>
+
+            <nav class="titulo A-onda">
+                <a href="Movies/A-onda.html">
+                    <img class="Capa A-onda" src="Images/A onda.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>A onda</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 1h 46min 43s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
         </div><!--Fim div filmes-->
 
         <div class="series">
