--- a/Movies/A-noiva-cadaver.html
+++ b/Movies/A-noiva-cadaver.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../Styles/moviePg.css" />
     <link rel="stylesheet" href="../Styles/menu.css"/>
 
-    <title>A nova cadáver</title>
+    <title>A noiva cadáver</title>
 </head>
 <body>
 
