--- a/index.html
+++ b/index.html
@@ -329,7 +329,18 @@
                     </ul>
                 </a>
             </nav>
-        </div>
+
+            <nav class="titulo Caverna-do-Dragao">
+                <a href="Series/Caverna-do-Dragao/Caverna-do-Dragao_index.html">
+                    <img class="Capa Caverna do Dragão" src="Images/Caverna-do-Dragao/Caverna do dragao - capa.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Caverna do Dragão</strong></li>
+                        <li class="topic">Completo</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+        </div><!--Fim das series-->
 
         <footer></footer>
     </body>
