--- a/Series/Caverna-do-Dragao/E2.html
+++ b/Series/Caverna-do-Dragao/E2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/menu.css" />
 
-	<title>Caverna do Dragão-E1-A noite sem amanhã</title>
+	<title>Caverna do Dragão-E2-Os olhos do observador</title>
 </head>
 <body>
     <header>
@@ -29,39 +29,39 @@
     </header>
 
     <h1 class="Title">Caverna do Dragão</h1>
-    <h2 class="Sub Title">A noite sem amanhã</h2>
+    <h2 class="Sub Title">Os olhos do observador</h2>
 
-    <iframe id="movieFrame" src="https://drive.google.com/file/d/1eE_bauR9q-KqBKJv4_4NaFengqTlwnZ3/preview?"
+    <iframe id="movieFrame" src="https://drive.google.com/file/d/1NPu1p8Lscmh6BgtnIdvHCXJRZ6xwkyFb/preview?"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
-    <h2>Episódio 1 - A noite sem amanhã</h2>
+    <h2>Episódio 2 - Os olhos do observador</h2>
 
 
     <div class="sequencia4" style="margin-top: 0">
-        <nav class="titulo serie E2">
-            <a href="E2.html">
-                <img class="Capa E2" src="../../Images/Caverna-do-Dragao/E2 edited.png" />
-                <ul class="info">
-                    <li class="topic-Title"><strong>Episódio 2</strong></li>
-                    <li class="topic-Subtitle">Os olhos do observador</li>
-                    <li class="topic">Duração: </li>
-                    <li class="topic">Dublado</li>
-                </ul>
-            </a>
-        </nav>
+            <nav class="titulo serie E1">
+                <a href="E1.html">
+                    <img class="Capa E1" src="../../Images/Caverna-do-Dragao/E1 edited.png" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Episódio 1</strong></li>
+                        <li class="topic-Subtitle">A noite sem amanhã</li>
+                        <li class="topic">Duração: </li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
 
-        <nav class="titulo serie E3">
-            <a href="E3.html">
-                <img class="Capa E3" src="../../Images/Caverna-do-Dragao/E3 edited.png" />
-                <ul class="info">
-                    <li class="topic-Title"><strong>Episódio 3</strong></li>
-                    <li class="topic-Subtitle">O salão dos ossos</li>
-                    <li class="topic">Duração: </li>
-                    <li class="topic">Dublado</li>
-                </ul>
-            </a>
-        </nav>
+            <nav class="titulo serie E3">
+                <a href="E3.html">
+                    <img class="Capa E3" src="../../Images/Caverna-do-Dragao/E3 edited.png" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Episódio 3</strong></li>
+                        <li class="topic-Subtitle">O salão dos ossos</li>
+                        <li class="topic">Duração: </li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
 
         <div style="display: none;">
             <nav class="titulo serie E4">
