--- a/index.html
+++ b/index.html
@@ -298,6 +298,18 @@
                     </ul>
                 </a>
             </nav>
+
+            <nav class="titulo Parasita">
+                <a href="Movies/Parasita.html">
+                    <img class="Capa Parasita" src="Images/Parasita.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Parasita</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 2h 12min</li>
+                        <li class="topic">Legendado</li>
+                    </ul>
+                </a>
+            </nav>
         </div><!--Fim div filmes-->
 
         <div class="series">
@@ -342,6 +354,5 @@
             </nav>
         </div><!--Fim das series-->
 
-        <footer></footer>
     </body>
 </html>
